# remot-worker-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SOLUTION_SUMMARY.md  build.bat
include/: AppState.h  DatabaseManager.h  FileUploader.h  LoginScreen.h  MonitoringScreen.h  NetworkMonitor.h  RemoteWorkerApp.h  ScreenCapture.h  UserActivity.h
src/: AppState.cpp  DatabaseManager.cpp  FileUploader.cpp  LoginScreen.cpp  MonitoringScreen.cpp  NetworkMonitor.cpp  RemoteWorkerApp.cpp  ScreenCapture.cpp  UserActivity.cpp  main.cpp
